DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2003-11-07 patrickh    org.vrjuggler.tweek.net.corba.CorbaService.init() now
                       passes all CORBA-related exceptions through to the
                       caller.
                       NEW VERSION: 0.16.1
2003-09-19 patrickh    Removed the Emacs/Windows file chooesr open style
                       preference.  Changed the semantics of
                       GlobalPreferencesService.getChooserStartDir() to return
                       a path instead of a symbolic string.
                       NEW VERSION: 0.16.0
2003-08-25 aronb       Added a BeanStatus dialog box that shows all loaded beans
                       and beans that are waiting for dependancies. It also
                       shows details such as JAR URL, Class Name, and deps.
2003-08-23 patrickh    Added the JGoodies Looks Swing look and feel.
2003-08-16 patrickh    Refactored the built-in Tweek Service Beans to be
                       accessed via proxies.  This makes acquisition of the
                       service reference dramatically simpler.
                       NEW VERSION: 0.15.0
2003-08-12 patrickh    The method getBean() in the class
                       org.vrjuggler.tweek.beans.BeanInstantiationEvent is now
                       getTweekBean().
                       NEW VERSION: 0.14.0
2003-08-03 patrickh    Connected the PyQt-based GUI to the build.
2003-05-20 patrickh    configure.in requries Autoconf 2.53 or newer.
2003-03-10 patrickh    Added tweek::SubjectManager::getName() method.
                       NEW VERSION: 0.13.5
2003-02-01 patrickh    The Tweek C++ API now builds on Windows.
                       NEW VERSION: 0.13.4
2003-01-06 patrickh    Updated to VPR 0.22.0.
                       NEW VERSION: 0.13.3
2002-12-24 patrickh    Updated to VPR 0.21.0.
                       NEW VERSION: 0.13.2